[package]
authors = ["bnjmnt <bnjmnt@duck.com>"]
categories = ["simulation"]
description = "A library that allows distributed applications to work with Maelstrom"
edition = "2021"
homepage = "https://github.com/bnjmnt/async-maelstrom"
keywords = ["distributed", "jepsen", "maelstrom", "systems", "workbench"]
license-file = "LICENSE"
name = "async-maelstrom"
readme = "README.md"
repository = "https://github.com/bnjmnt/async-maelstrom"
version = "0.1.1"

[dependencies]
async-std = { version = "1", features = ["async-io"] }
async-trait = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
async-scoped = { version = "0.7.0", features = ["use-tokio"] }
env_logger = "0"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0"
